--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,25 @@
 {
     "name": "anomaly/notifications-module",
     "type": "streams-addon",
+    "homepage": "https://pyrocms.com/",
+    "license": "https://pyrocms.com/pro/license",
+    "authors": [
+        {
+            "name": "PyroCMS, Inc.",
+            "email": "support@pyrocms.com",
+            "homepage": "http://pyrocms.com/",
+            "role": "Owner"
+        },
+        {
+            "name": "Ryan Thompson",
+            "email": "ryan@pyrocms.com",
+            "homepage": "http://ryanthepyro.com/",
+            "role": "Developer"
+        }
+    ],
+    "support": {
+        "email": "support@pyrocms.com"
+    },
     "autoload": {
         "psr-4": {
             "Anomaly\\NotificationsModule\\": "src/"
